--- a/Basic_HTML_and_CSS.html/shared.css
+++ b/Basic_HTML_and_CSS.html/shared.css
@@ -302,6 +302,13 @@ section {
     box-shadow: 1px 1px 4px 0 rgba(0,0,0,0.3);
 }
 
+.submit input[type="submit"]:hover {
+    color: #000;
+    background-color: #8D8E8F;
+    box-shadow: input 1px 2px 15px 0 rgba(0, 0, 0, 0.5);
+}
+
+
 
 
 
