--- a/One-page Website/CSS/one_page_website.css
+++ b/One-page Website/CSS/one_page_website.css
@@ -1,4 +1,4 @@
 font {
-    font-family: Papyrus, fantasy;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: medium;
 }
