--- a/One-page Website/CSS/one_page_website.css
+++ b/One-page Website/CSS/one_page_website.css
@@ -1,4 +1,5 @@
-font {
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+body {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: medium;
+    font-style: italic;
 }
